fixed the bug about the about us page not showing the background

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -450,7 +450,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 8% 10%;
+  padding: 15% 10%;
 
   p {
     font-size: .9rem;
@@ -542,7 +542,7 @@ main {
   &__header_container {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
-    padding: .5rem 1rem 1rem;
+    padding: .5rem 1rem 0;
   }
   &__header_title {
     font-family: "Montserrat", sans-serif;
@@ -782,7 +782,7 @@ main {
       width: 40px !important;
     }
     h2 {
-      font-size: 2rem !important;
+      font-size: 1.9rem !important;
     }
     .nav-brand {
       display: none;
@@ -912,7 +912,7 @@ main {
   .heading-title {
     font-size: 1.5rem ;
     margin: 0;
-    padding: 1rem !important;
+    padding: 1.2rem !important;
   }
   .landing-title {
     font-size: 2rem;
@@ -1022,7 +1022,12 @@ main {
   }
   .news_and_events {
     padding: 8% 3%;
+
+    &__title {
+      font-size: 3rem;
+    }
   }
+
   .event_carousel__image {
     height: 200px;
   }
